# fcgen-mcp

./: .gitignore  README.md  pyproject.toml  registry.json
docs/: assembly-guide.md  mcp-tools.md  quickstart.md  template-guide.md
skill/: SKILL.md
src/fcgen/: __init__.py  registry.py
src/fcgen/assembly/: engine.py  freecad_assemble.py
src/fcgen/cli/: main.py
src/fcgen/core/: freecadcmd.py  logging.py  runner.py
src/fcgen/mcp/: server.py
templates/adapter_plate/: constraints.json  freecad_generate.py  generator.py  schema.json
templates/assembly_examples/: compact_desk.json  desk_with_shelf.json  plate_brackets_bolts.json  plate_with_brackets.json  simple_desk.json  standing_desk.json
templates/bolt/: constraints.json  freecad_generate.py  schema.json
templates/bracket/: constraints.json  freecad_generate.py  rules.yaml  schema.json
templates/cup/: constraints.json  freecad_generate.py  generator.py  schema.json
templates/enclosure/: constraints.json  freecad_generate.py  schema.json
templates/lego_brick/: constraints.json  freecad_generate.py  schema.json
templates/minecraft_block/: constraints.json  freecad_generate.py  schema.json
templates/simple_leg/: constraints.json  freecad_generate.py
templates/sphere/: constraints.json  freecad_generate.py  schema.json
templates/table_top/: constraints.json  generator.py  schema.json
templates_candidate/simple_leg/: schema.json
templates_candidate/table_top/: freecad_generate.py
tests/: test_assembly.py  test_e2e_mcp.py  test_mcp.py  test_registry.py  test_smoke.py  test_validation.py
(+15 files in other folders)
