[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fcgen"
version = "0.1.0"
description = "Schema-driven parametric part generator for FreeCAD headless workflows"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.24.0,<2.0"]
yaml = ["pyyaml>=6.0"]

[project.scripts]
fcgen = "fcgen.cli.main:main"
fcgen-mcp = "fcgen.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.fcgen]
freecad_min_version = "0.19"
freecad_recommended_version = "1.0"
freecad_tested_versions = ["0.21", "1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
